# sailbot2425

./: .gitignore  start_sailbot.sh
src/messaging/: package.xml  setup.cfg  setup.py
src/path_planning/: package.xml  setup.py
src/path_planning/path_planning/: geometry_utils.py  leg.py  waypoint.py
src/sailboat_control/: package.xml  setup.py
src/sailboat_control/sailboat_control/: boat.py  buoy_detection.py  common.py  control.py  debug_node.py  event_control.py  events.py  navigation_node.py  state_management.py  state_management_node.py  test_control_node.py  update_rudder.py  update_sails.py
src/sensors/: package.xml  setup.py
src/sensors/sensors/: arduino_interface.py  gps.py  radio.py  radio_comm_node.py  rudder_control_node.py  sensor_manager.py  winch_control_node.py  wind.py  wind_sensor_node.py  wind_smoother.py
util/: .gps_dump.py.swp  arduino_master_winch.py  arduino_wind_v1.ino  detiled_i2c_scan.py  gps_dump.py  gps_fix_UBX.py  gps_read.py  gps_read_debug.py  i2c-scan-script.py  i2c_float.py  i2c_read_wind.py  i2c_rudder_send.py  i2c_scan.py  i2c_winch_loop.py  i2c_winch_send.py  imu_test.py  jetson_master_servo.py  jetson_real_servo_control.py  mac_terminal.py  motor_v.py  num_test.py  pi_send.py  winch_a.py  winch_cal.py  wind_serial.py  wind_v.py
